--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header>
+        <!-- nav is herr -->
         <nav class="navbar">
             <div class="logo-container">
                 <img src="./logo.png" alt="logo" width="50px">
@@ -24,10 +25,85 @@
                 <li>SUPPORT</li>
                 <li>ABOUT</li>
             </ul>
-            <div class="right">
+            <div class="right-img">
                 <i class="fa-solid fa-bag-shopping"></i>
             </div>
         </nav>
+        <!-- main header -->
+        <div id="main-header">
+            <div class="left">
+                <div class="bigtext">
+                    <span>LET YOUR</span>
+                    <br/>
+                    <span>MIND</span>
+                    <span class="gradient-text">EXPLORE</span>
+                    <br/>
+                    <span>NEW WORLD</span>
+                </div>
+                <p>Playing electronics games, whether through console, computers, mobile phones or another medium <br/>
+                    altogether. Gaming is a nuanced term that suggesrs regular gameplay, possibly as a hobby.
+                </p>
+                <div class="buttons">
+                    <div class="btn btn1">BUY NOW</div>
+                    <div class="btn ">PLAY NOW</div>
+                </div>
+                <div id="overview">
+                    <div class="overview-items">
+                        <h4>300+</h4>
+                        <h4>Unique Style</h4>
+                    </div>
+                    <div class="overview-items">
+                        <h4 class="gradient-text">200+</h4>
+                        <h4>Project finished</h4>
+                    </div>
+                    <div class="overview-items">
+                        <h4>500+</h4>
+                        <h4>Happy customer </h4>
+                    </div>
+                </div>
+            </div>
+            <div class="right">
+                <img src="./mainhedr.png" alt="mainheader">
+            </div>
+        </div>
+        <!-- horizontal band -->
+        <div class="band">
+            <div>
+                <img src="./star-1.png" alt="star" width="15px">
+                ACTION - PACKED
+            </div>
+            <div>
+                <img src="./star-1.png" alt="star" width="15px">
+                MIND - BENDING
+            </div>
+            <div>
+                <img src="./star-1.png" alt="star" width="15px">
+                COLLECTION OG GAMES
+            </div>
+        </div>
     </header>
+
+    <!-- main -->
+
+    <main>
+        <section class="choose-section">
+            <p class="choose-section-title">CHOOSE YOUR <br/>
+            <span class="gradient-text">FAVOURIATE</span></p>
+            <div class="section-description">
+                <p>Offer sneak peaks and previews of upcoming games, including trailers, screenshots, and information about release.
+                </p>
+            </div>
+            <div class="image-carousel">
+                <img src="./game.jpeg" alt="game" width="300px">
+                <img class="center-img" src="game3.jpeg" alt="game3" width="500px">
+                <img src="game5.jpeg" alt="game5" width="400px">
+            </div>
+            <div class="buttons">
+                <button class="btn btn1">VIEW ALL</button>
+                <button class="btn"> PLAY NOW</button>
+            </div>
+        </section>
+    </main>
+
 </body>
 </html>
