--- a/index.html
+++ b/index.html
@@ -103,6 +103,31 @@
                 <button class="btn"> PLAY NOW</button>
             </div>
         </section>
+
+        <!-- discover section  -->
+
+        <section class="discover-section">
+            <div class="discover-card">
+                <img src="./gaming6.png" alt="gaming6" width="500PX">
+                <div class="discover-card-details">
+                    <p class="big-text">DISCOVER <br/> <span class="gradient-text">
+                        VIRTUAL
+                    </span>REALITY <br/>GAMING</p>
+                    <p class="section-description">A well-designed gaming header often incorporates elements such as game characters, iconic symbols, vibrant colors, and dynamic visuals to convey excitement, adventure, and the immersive nature of gaming.</p>
+                    <div class="discover-card-details-btn">PLAY NOW</div>
+                </div>
+            </div>
+            
+        </section>
+
+        <!-- demo card section  -->
+
+        <section class="demo-card-section">
+            <buttton class="btn btn1"> NEWEST GAMES</buttton>
+            <buttton class="btn">LATEST GAMES</buttton>
+            <buttton class="btn">FIGHT GAMES</buttton>
+            <buttton class="btn">SPORT GAMES</buttton>
+        </section>
     </main>
 
 </body>
