--- a/index.html
+++ b/index.html
@@ -128,6 +128,96 @@
             <buttton class="btn">FIGHT GAMES</buttton>
             <buttton class="btn">SPORT GAMES</buttton>
         </section>
+        <section class="demo-cards-section">
+            <div class="buttons">    
+            </div>
+            <div class="demo-cards">
+                <div class="demo-card">
+                    <img src="chr2.jpg" alt="chr">
+                    <h5>Core philosophies</h5>
+                    <div class="demo-prof-details">
+                        <img src="assests.png" alt="joker" width="20px">
+                        <div>
+                            <h5>Cody Fisher</h5>
+                            <p>The Walt Disney Company</p>
+                        </div>
+                    </div>
+                    <button class="demo-game-btm">
+                    Live Demo
+                    </button>
+                </div>
+                <div class="demo-card">
+                    <img src="chr1.png" alt="chr">
+                    <h5>Core philosophies</h5>
+                    <div class="demo-prof-details">
+                        <img src="assests.png" alt="joker" width="20px">
+                        <div>
+                            <h5>Cody Fisher</h5>
+                            <p>The Walt Disney Company</p>
+                        </div>
+                    </div>
+                    <button class="demo-game-btm">
+                    Live Demo
+                    </button>
+                </div>
+                <div class="demo-card">
+                    <img src="chr3.jpg" alt="chr">
+                    <h5>Core philosophies</h5>
+                    <div class="demo-prof-details">
+                        <img src="assests.png" alt="joker" width="20px">
+                        <div>
+                            <h5>Cody Fisher</h5>
+                            <p>The Walt Disney Company</p>
+                        </div>
+                    </div>
+                    <button class="demo-game-btm">
+                    Live Demo
+                    </button>
+                </div>
+                <div class="demo-card">
+                    <img src="chr5.jpg" alt="chr">
+                    <h5>Core philosophies</h5>
+                    <div class="demo-prof-details">
+                        <img src="assests.png" alt="joker" width="20px">
+                        <div>
+                            <h5>Cody Fisher</h5>
+                            <p>The Walt Disney Company</p>
+                        </div>
+                    </div>
+                    <button class="demo-game-btm">
+                    Live Demo
+                    </button>
+                </div>
+                <div class="demo-card">
+                    <img src="chr6.png" alt="chr">
+                    <h5>Core philosophies</h5>
+                    <div class="demo-prof-details">
+                        <img src="assests.png" alt="joker" width="20px">
+                        <div>
+                            <h5>Cody Fisher</h5>
+                            <p>The Walt Disney Company</p>
+                        </div>
+                    </div>
+                    <button class="demo-game-btm">
+                    Live Demo
+                    </button>
+                </div>
+                <div class="demo-card">
+                    <img src="chr8.png" alt="chr">
+                    <h5>Core philosophies</h5>
+                    <div class="demo-prof-details">
+                        <img src="assests.png" alt="joker" width="20px">
+                        <div>
+                            <h5>Cody Fisher</h5>
+                            <p>The Walt Disney Company</p>
+                        </div>
+                    </div>
+                    <button class="demo-game-btm">
+                    Live Demo
+                    </button>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
