--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- nav is herr -->
         <nav class="navbar">
             <div class="logo-container">
-                <img src="./logo.png" alt="logo" width="50px">
+                <img src="./assests/logo.png" alt="logo" width="50px">
                 <h2>Board</h2>
             </div>
             <ul class="nav-items">
@@ -63,21 +63,21 @@
                 </div>
             </div>
             <div class="right">
-                <img src="./mainhedr.png" alt="mainheader">
+                <img src="./assests/mainhedr.png" alt="mainheader">
             </div>
         </div>
         <!-- horizontal band -->
         <div class="band">
             <div>
-                <img src="./star-1.png" alt="star" width="15px">
+                <img src="./assests/star-1.png" alt="star" width="15px">
                 ACTION - PACKED
             </div>
             <div>
-                <img src="./star-1.png" alt="star" width="15px">
+                <img src="./assests/star-1.png" alt="star" width="15px">
                 MIND - BENDING
             </div>
             <div>
-                <img src="./star-1.png" alt="star" width="15px">
+                <img src="./assests/star-1.png" alt="star" width="15px">
                 COLLECTION OG GAMES
             </div>
         </div>
@@ -94,9 +94,9 @@
                 </p>
             </div>
             <div class="image-carousel">
-                <img src="./game.jpeg" alt="game" width="300px">
-                <img class="center-img" src="game3.jpeg" alt="game3" width="500px">
-                <img src="game5.jpeg" alt="game5" width="400px">
+                <img src="./assests/game.jpeg" alt="game" width="300px">
+                <img class="center-img" src="./assests/game3.jpeg" alt="game3" width="500px">
+                <img src="./assests/game5.jpeg" alt="game5" width="400px">
             </div>
             <div class="buttons">
                 <button class="btn btn1">VIEW ALL</button>
@@ -108,7 +108,7 @@
 
         <section class="discover-section">
             <div class="discover-card">
-                <img src="./gaming6.png" alt="gaming6" width="500PX">
+                <img src="./assests/gaming6.png" alt="gaming6" width="500PX">
                 <div class="discover-card-details">
                     <p class="big-text">DISCOVER <br/> <span class="gradient-text">
                         VIRTUAL
@@ -133,10 +133,10 @@
             </div>
             <div class="demo-cards">
                 <div class="demo-card">
-                    <img src="chr2.jpg" alt="chr">
+                    <img src="./assests/chr2.jpg" alt="chr">
                     <h5>Core philosophies</h5>
                     <div class="demo-prof-details">
-                        <img src="assests.png" alt="joker" width="20px">
+                        <img src="./assests/assests.png" alt="joker" width="20px">
                         <div>
                             <h5>Cody Fisher</h5>
                             <p>The Walt Disney Company</p>
@@ -147,10 +147,10 @@
                     </button>
                 </div>
                 <div class="demo-card">
-                    <img src="chr1.png" alt="chr">
+                    <img src="./assests/chr1.png" alt="chr">
                     <h5>Core philosophies</h5>
                     <div class="demo-prof-details">
-                        <img src="assests.png" alt="joker" width="20px">
+                        <img src="./assests/assests.png" alt="joker" width="20px">
                         <div>
                             <h5>Cody Fisher</h5>
                             <p>The Walt Disney Company</p>
@@ -161,10 +161,10 @@
                     </button>
                 </div>
                 <div class="demo-card">
-                    <img src="chr3.jpg" alt="chr">
+                    <img src="./assests/chr3.jpg" alt="chr">
                     <h5>Core philosophies</h5>
                     <div class="demo-prof-details">
-                        <img src="assests.png" alt="joker" width="20px">
+                        <img src="./assests/assests.png" alt="joker" width="20px">
                         <div>
                             <h5>Cody Fisher</h5>
                             <p>The Walt Disney Company</p>
@@ -175,10 +175,10 @@
                     </button>
                 </div>
                 <div class="demo-card">
-                    <img src="chr5.jpg" alt="chr">
+                    <img src="./assests/chr5.jpg" alt="chr">
                     <h5>Core philosophies</h5>
                     <div class="demo-prof-details">
-                        <img src="assests.png" alt="joker" width="20px">
+                        <img src="./assests/assests.png" alt="joker" width="20px">
                         <div>
                             <h5>Cody Fisher</h5>
                             <p>The Walt Disney Company</p>
@@ -189,10 +189,10 @@
                     </button>
                 </div>
                 <div class="demo-card">
-                    <img src="chr6.png" alt="chr">
+                    <img src="./assests/chr6.png" alt="chr">
                     <h5>Core philosophies</h5>
                     <div class="demo-prof-details">
-                        <img src="assests.png" alt="joker" width="20px">
+                        <img src="./assests/assests.png" alt="joker" width="20px">
                         <div>
                             <h5>Cody Fisher</h5>
                             <p>The Walt Disney Company</p>
@@ -203,10 +203,10 @@
                     </button>
                 </div>
                 <div class="demo-card">
-                    <img src="chr8.png" alt="chr">
+                    <img src="./assests/chr8.png" alt="chr">
                     <h5>Core philosophies</h5>
                     <div class="demo-prof-details">
-                        <img src="assests.png" alt="joker" width="20px">
+                        <img src="./assests/assests.png" alt="joker" width="20px">
                         <div>
                             <h5>Cody Fisher</h5>
                             <p>The Walt Disney Company</p>
@@ -218,6 +218,54 @@
                 </div>
             </div>
         </section>
+
+        <!-- foooter -->
+
+        <footer>
+            <img src="./assests/last-image.png" alt="last-image">
+            <div class="footer-container">
+                <div class="about-and-links">
+                    <div>
+                        <img src="./assests/logowithname.png" alt="logo" class="logo-with-name" width="150">
+                        <p>A well-designed gaming header often incorporates elements such as game characters, iconic symbols,vibrant colors and dynamic visuals.</p>
+                    </div>
+                    <div>
+                        <h4>COMPANY</h4>
+                        <ul>
+                            <li>Products</li>
+                            <li>Apps & Games</li>
+                            <li>Features</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h4>HELP</h4>
+                        <ul>
+                            <li>Support</li>
+                            <li>About</li>
+                            <li>Contact Us</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h4>RESOURCES</h4>
+                        <ul>
+                            <li>Youtube Playlist</li>
+                            <li>How To Use</li>
+                            <li>Terms & Condition</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="brands">
+                    <img src="./assests/company-logo1.png" alt="microsoft" width="150px">
+                    <img src="./assests/company-logo2.png" alt="cannon" width="150px">
+                    <img src="./assests/company-logo3.png" alt="asus" width="150px">
+                    <img src="./assests/company-logo4.png" alt="roblox" width="150px">
+                    <img src="./assests/company-logo5.png" alt="twicth" width="100px">
+                </div>
+                <div>
+                     © copyright 2024, All Rights Reserved by Shivam Skills
+                </div>
+            </div>
+        </footer>
     </main>
 
 </body>
